Fix menu animation alignment issue with scroll bar

--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -26,7 +26,7 @@ body {
   width: 100%;
   height: 100%;
   position: fixed;
-  overflow: auto;
+  overflow-y: scroll;//need to permanently display so it doesn't mess with menu animation alignment
 }
 
 ul {
